--- a/BasicServlet/src/main/webapp/adduser.html
+++ b/BasicServlet/src/main/webapp/adduser.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>User Registration:</h1>
-<form method="post" action="addServlet">
+<form method="post" action="/BasicServlet/addUser">
     <table>
         <tr>
             <td>First Name:</td>
